<resources>
    <string name="app_name">TakeTheBus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">304980193327819</string>
    <string name="fb_login_protocol_scheme">fb304980193327819</string>


    <string name="new_bus_station_text">For security this will not update the database directly! You will have to send an email!
        You can write comments below the data in the body of the email! The data will be checked, and if no problems will be found then it\'ll be pushed to the database! Thanks for your patience!</string>
    <string name="new_bus_station_admin_text">Update database!</string>
    <string name="web_client_id">228673432104&#8211;6stku8sa4cndvbk9vsgf6t1362ev75jp.apps.googleusercontent.com</string>
    <string name="notification_text">Click here for navigate to final destination!</string>
    <string name="upload_data_alert_question">Are you sure you want to upload these data?</string>
    <string name="upload_data_alert_title">Upload</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="alert_button_ok">Ok</string>
    <string name="upload_alert_uploaded">Data has been uploaded</string>
    <string name="upload_mail_sent">Mail has been sent!</string>
    <string name="upload_mail_failed">Mail failed to send!</string>
    <string name="upload_form_station">Please enter the name of the station!</string>
    <string name="upload_form_latitude">Please enter alatitude value!</string>
    <string name="upload_form_longitude">Please enter a longitude value!</string>
    <string name="upload_form_buslane">Please enter at least one lane that goes through this station!</string>
    <string name="upload_form_signin">For this function please sign in!</string>
    <string name="signIn">Sign In</string>
    <string name="change_password_button">Change password</string>
    <string name="incorrect_password">Your password or password confirmation is incorrect!</string>
    <string name="password_updated">Password updated!</string>
    <string name="password_update_failed">Password updated failed!</string>
    <string name="cancel">Cancel</string>
    <string name="no_search_result">You don\'t have results for your search!</string>
    <string name="multiple_results">You have multiple choices! Wait for best rout calculation and then select the best for your needs!</string>
    <string name="close_to_destination">You are close to your destination, you can take a walk!</string>
    <string name="no_routs_found">You have no routs for your needs!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="too_short_password">You need to enter a password longer than 6 characters!</string>
    <string name="auth_failed">Authentication failed, please try again later!</string>
    <string name="forgot_password_email">Enter your registered email!</string>
    <string name="reset_email_sent">We sent you instructions to reset your password, check your email inbox, please!</string>
    <string name="reset_email_failed">Failed to send password reseting email!</string>
    <string name="create_email_password">Creating user with email and password!</string>
    <string name="turn_data">Turn on data connection, please!</string>
    <string name="connection_problem">Connection problem!</string>
    <string name="turn_wifi_ormobile">The app needs data connection to work! Turn on wifi or mobile connection, please!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="need_permission">"We need permission for the app to work properly! Please restart the app!"</string>
    <string name="login">Login</string>
    <string name="add_bus_station">Add new bus station</string>
    <string name="prfile">Profile</string>
    <string name="map">Map</string>
    <string name="station_name_hint">Bus station name</string>
    <string name="send">Send</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="email_hint">Email</string>
    <string name="register">Sign Up</string>
    <string name="list_of_new_stations">The list of new stations uploaded by users</string>
    <string name="not_now">Not now</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">You don\'t have an account yet? Sign Up!</string>
    <string name="cahnge_password">Change password</string>
    <string name="disconnect">Log out</string>
    <string name="recently_visisted">These are your recently visited places!</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="lane">Lane</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>

</resources>
