<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fadeScrollbars="true"
    android:background="@drawable/loginbackground">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginscreen"
    >

    <ImageView
        android:id="@+id/loginscreen_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_logo_height"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/logo_margin_top"/>
    <EditText
        android:id="@+id/email"
        android:background="#F2F2F2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_size"
        android:hint="@string/email_hint"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:drawableLeft="@drawable/avatar_login"
        android:textColor="@color/colorText"
        android:inputType="textEmailAddress"
        android:textColorHint="#555555" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_size"
        android:background="#F2F2F2"
        android:hint="@string/password_hint"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:drawableLeft="@drawable/password_logo"
        android:textColor="@color/colorText"
        android:textColorHint="#555555"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="#FF9E57"
            android:layout_marginLeft="@dimen/facebook_profile_text_marginLEFT_RIGHT"
            android:layout_marginRight="@dimen/button_margin_between"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/signIn"
            android:textAlignment="center"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorTextIcons"/>
        <Button
            android:id="@+id/continue_no_account"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="#FF9E57"
            android:layout_marginLeft="@dimen/button_margin_between"
            android:layout_marginRight="@dimen/facebook_profile_text_marginLEFT_RIGHT"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/not_now"
            android:textAlignment="center"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorTextIcons"/>
    </LinearLayout>
    <Button
        android:id="@+id/resetPassword"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/profile_text_marginLEFT_RIGHT"
        android:background="@null"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorTextIcons" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:background="@null"
        android:text="@string/no_account"
        android:textAllCaps="false"
        android:textColor="@color/colorTextIcons" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/google_button_height"
            android:layout_marginStart="@dimen/profile_text_marginLEFT_RIGHT"
            android:layout_marginEnd="@dimen/profile_text_marginLEFT_RIGHT"
            android:layout_marginTop="@dimen/profile_text_marginLEFT_RIGHT"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/google_button_height"
            android:paddingTop="@dimen/facebook_button_padding"
            android:paddingBottom="@dimen/facebook_button_padding"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/cardText_text_Padding"
            android:layout_marginStart="@dimen/facebook_profile_text_marginLEFT_RIGHT"
            android:layout_marginEnd="@dimen/facebook_profile_text_marginLEFT_RIGHT"
            android:elevation="2dp" />



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progressbar_dimensions"
        android:layout_height="@dimen/progressbar_dimensions"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="@dimen/profile_text_marginLEFT_RIGHT"
        android:visibility="gone" />

</LinearLayout>
</ScrollView>