<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fadeScrollbars="true">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:id="@+id/registerscreen">

    <ImageView
        android:id="@+id/registerscreen_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_logo_height"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/logo_margin_top"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_size"
        android:hint="@string/email_hint"
        android:drawableLeft="@drawable/avatar_login"
        android:background="#F2F2F2"
        android:textColor="@color/colorText"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:textColorHint="#555555"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_size"
        android:hint="@string/password_hint"
        android:drawableLeft="@drawable/password_logo"
        android:background="#F2F2F2"
        android:textColor="@color/colorText"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:textColorHint="#555555"
        android:maxLines="1"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/register"
        android:background="#FF9E57"
        android:textAlignment="center"
        android:textSize="@dimen/button_text_size"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="@dimen/button_margin_left_right"
        android:layout_marginRight="@dimen/button_margin_left_right"
        android:layout_marginTop="@dimen/edit_text_margin_top" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progressbar_dimensions"
        android:layout_height="@dimen/progressbar_dimensions"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/edit_text_margin_top"
        android:visibility="gone" />

</LinearLayout>
</ScrollView>
